--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="widht=device-widht, initial-scale=1.0"> 
         <title> CASA15 </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="CSS/style.css">
         <body class="fondoLogo">
             <header>
             <div class="fondoGris">
-                <img src="images/casa15.jpeg" alt="LOGO" width="200px" class="logo">    
+                <img src="images/casa15.jpeg" alt="LOGO" width="200px" class="logo img-thumbnail img-fluid">    
                 <p><h1 class="centrado">CASA 15</h1></p>
             </div>
             </header>
-            <nav class="nav">
+            <div>
+            <nav id="menu">
                 <ul>
                     <li><a href="index.html"> Inicio</a></li>
                     <li><a href="pages/velas.html">Velas</a></li>
@@ -27,24 +29,29 @@
                         </ul>
                     <li><a href="pages/vinos.html">Vinos </a></li>    
                     <li><a href="pages/contacto.html">Contacto</a></li>    
-                </ul>    
+                </ul> 
+            </div>   
             </nav>
-            <section class="cuerpoPadre">
-                <h2 class="border">LA ESENCIA DE TU HOGAR</H2>
-                <div id="sandalo" class="border fondoBeige">
+            </div>
+            <main class="container-fluid">
+            <section class="cuerpoPadre row">
+                <h2 class="border col-lg-12 col-md-12 col-sm-12">LA ESENCIA DE TU HOGAR</H2>
+                <div id="sandalo" class="border fondoBeige col-lg-6 col-md-6 col-sm-12">
                     <article><h3>SANDALO</h3></article> 
-                    <img class= "imagen__redondeada" src="images/sandalo.jpeg" alt="Sandalo" width="200px">
+                    <img class= "imagen__redondeada img-fluid" src="images/sandalo.jpeg" alt="Sandalo" width="200px">
                     <p class="LetraCursiva textocuadrado"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione exercitationem ab omnis laboriosam! Eaque eius autem, aliquid eos accusamus modi cumque, provident alias a natus, aperiam repellat! Qui, sint autem!</p>
                 </div>
-                <div id="vainilla" class="border fondoBeige">
+                <div id="vainilla" class="border fondoBeige col-lg-6 col-md-6 col-sm-12">
                     <article><h3>VAINILLA</h3></article>
-                    <img class= "imagen__redondeada" src="images/vainilla.jpeg" alt="Vainilla" width="200px">
+                    <img class= "imagen__redondeada img-fluid" src="images/vainilla.jpeg" alt="Vainilla" width="200px">
                     <p class="LetraCursiva textocuadrado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus error sapiente molestiae distinctio, vel perferendis ducimus quidem neque incidunt rerum eos, sit amet placeat nam sequi modi laboriosam voluptatibus nesciunt.</p>
                 </div>
             </section>
+            </main>
             <footer class="footer"> <a href="https://www.instagram.com/casa15.arg/"> <img src="images/instagram.webp" alt="Instagram" width="20px"></a>
                 <a href="https://www.facebook.com/CASA-15-109709838151946/"> <img src="images/Facebook.svg" alt="Facebook" width="20px"></a>
-                </footer>    
-        </body>
+                </footer>            
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
     </head>
 </html>
