--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CASA15</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css"
 </head>
 <body class="fondoLogo">
@@ -13,7 +14,7 @@
         <img src="../images/casa15.jpeg" alt="LOGO" width="200px" class="logo">    
         <p><h1 class="letratime centrado">CASA 15</h1></p>
     </header>
-    <nav>
+    <nav id="menu"> 
         <ul>
             <li><a href="../index.html"> Inicio</a></li>
             <li><a href="velas.html">Velas</a></li>
@@ -34,14 +35,22 @@
             <form class="fondoBeige">
             <fieldset>
             <legend> <h2>Formulario de contacto</h2></legend>
+                <div class="form-group">
                 <label for="nombre">Nombre</label>
-                <input type="text" name="nombre">
+                <input class="form-control" type="text" name="nombre">
+                </div>
+                <div class="form-group">
                 <label for="telefono">Teléfono</label>
-                <input type="number " name="telefono">
+                <input class="form-control" type="number " name="telefono">
+                </div>
+                <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" name="email">
-                <textarea name="mensaje" placeholder="Deje su mesaje aqui"></textarea>
-                <input type="submit" value="Enviar">
+                <input class="form-control" type="email" name="email">
+                </div>
+                <div class="form-group">
+                <textarea class="form-control" name="mensaje" placeholder="Deje su mesaje aqui"></textarea>
+                <input class="form-control" type="submit" value="Enviar">
+                </div>
             </fieldset>
             </form>
         </article>
