--- a/pages/velas.html
+++ b/pages/velas.html
@@ -13,7 +13,7 @@
         <img src="../images/casa15.jpeg" alt="LOGO" width="200px" class="logo">    
         <p><h1 class="letratime centrado">CASA 15</h1></p>
         </header>
-        <nav>
+        <nav id="menu">
             <ul>
                 <li><a href="../index.html"> Inicio</a></li>
                 <li><a href="velas.html">Velas</a></li>
